--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
-# Binaries for programs and plugins
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-.DS_Store
 lt
 
-# Test binary, built with `go test -c`
-*.test
+.DS_Store
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-.vscode
+.vscode/
+bin/
